--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
-  "name": "educational-story-generator",
+  "name": "easy-story-easy-life",
   "version": "1.0.0",
-  "description": "Generate educational stories based on user input",
+  "description": "An educational story generation application",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  "keywords": [
+    "education",
+    "stories",
+    "learning",
+    "ai",
+    "web-components"
+  ],
+  "author": "",
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "@supabase/supabase-js": "^2.38.4"
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^2.0.22"
   }
 } 
