Integrate FastAPI backend structure and documentation

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,25 @@
+# Environment variables for EasyStory Backend
+# Rename this file to .env and fill in your API key
+
+# Required: Your OpenRouter API Key
+OPENROUTER_API_KEY="YOUR_OPENROUTER_API_KEY_HERE"
+
+# Optional: Specify the exact model name you want to use on OpenRouter
+# If commented out, defaults to anthropic/claude-3.5-sonnet
+# Example: OPENROUTER_MODEL=google/gemini-pro
+# OPENROUTER_MODEL=""
+
+# Optional: Define allowed origins for CORS, comma-separated
+# Defaults to localhost and the likely deployed frontend URL if not set
+# ALLOWED_ORIGINS="http://localhost:8000,https://your-frontend-domain.com"
+ALLOWED_ORIGINS="http://localhost,http://localhost:8000,https://easystory.onrender.com"
+
+# Optional: Set the port the server listens on (Render provides this via env var)
+# PORT=8080
+
+# Optional: Enable Uvicorn reload for development (set to "true")
+UVICORN_RELOAD="false"
+
 # Server configuration
 PORT=3000
 
