Change default model to google/gemini-2.0-flash-001

--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,8 @@
 OPENROUTER_API_KEY="YOUR_OPENROUTER_API_KEY_HERE"
 
 # Optional: Specify the exact model name you want to use on OpenRouter
-# If commented out, defaults to anthropic/claude-3.5-sonnet
-# Example: OPENROUTER_MODEL=google/gemini-pro
+# If commented out, defaults to google/gemini-2.0-flash-001
+# Example: OPENROUTER_MODEL=anthropic/claude-3.5-sonnet
 # OPENROUTER_MODEL=""
 
 # Optional: Define allowed origins for CORS, comma-separated
