--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,7 +6,8 @@ ALLOWED_ORIGINS="http://localhost:5173,http://127.0.0.1:5173" # Frontend dev ser
 OPENROUTER_API_KEY="your_openrouter_api_key_here"
 OPENROUTER_MODEL="google/gemini-1.5-flash-latest"  # Or your preferred model
 
-# Supabase Configuration (if used)
+# Supabase Configuration
+# Used by the backend for database operations
 SUPABASE_URL="your_supabase_url_here"
-SUPABASE_ANON_KEY="your_supabase_anon_key_here"
-# SUPABASE_SERVICE_KEY="your_supabase_service_key_here" # Keep commented unless needed
+SUPABASE_SERVICE_KEY="your_supabase_service_key_here" # Required for backend write operations
+# SUPABASE_ANON_KEY="your_supabase_anon_key_here" # Anon key usually used by frontend, not backend service
